<resources>
    <string name="app_name">Foodie</string>
    <string name="sign_up"><u>Sign Up</u></string>
    <string name="login_here"><u>Login here</u></string>
    <string name="edit"><u>Edit</u></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="customer"><u>I am just a customer</u></string>
    <string name="owner"><u>Of course I am the owner!</u></string>
    <string name="businessAccountQuestion">Do you have a business account?</string>
    <string name="yes_i_do"><u>Yes, I do.</u></string>
    <string name="no_i_don_t"><u>No, I don\'t.</u></string>
    <string name="submit_your_business_info_now"><u>Submit your business info now!</u></string>
    <string name="cuisine">Cuisine</string>
    <string name="search">Search</string>
    <string name="cancel">Cancel</string>
    <string name="reset">Reset</string>
    <string name="submit">Submit</string>
    <string name="confirm">Confirm</string>
    <string name="ok">OK</string>
    <string name="info">Info</string>
    <string name="warning">Warning</string>
    <string name="dismiss">Dismiss</string>
    <string name="error">Error</string>
    <string name="user">User</string>
    <string name="restaurant_owner">Restaurant Owner</string>

</resources>